objects/disco__Discovery__c.object
<CustomObject>
    <description>The result of making a Discovery from a Form</description>
    <fields>
        <fullName>disco__Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>disco__Discovery_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Discovery Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Discoveries</relationshipLabel>
        <relationshipName>Discoveries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>disco__Discovery_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Discovery Type</label>
        <referenceTo>disco__Discovery_Type__c</referenceTo>
        <relationshipLabel>Discoveries</relationshipLabel>
        <relationshipName>Discoveries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>disco__Form__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Form</label>
        <referenceTo>disco__Form__c</referenceTo>
        <relationshipLabel>Discoveries</relationshipLabel>
        <relationshipName>Discoveries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>disco__Max_Score_Visible_Only__c</fullName>
        <description>Maximum achievable score counting only visible questions</description>
        <inlineHelpText>Maximum achievable score counting only visible questions</inlineHelpText>
        <label>Max Score (Visible Only)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>disco__Max_Score__c</fullName>
        <description>Maximum score attainable in the Discovery Rule that triggered the Discovery</description>
        <inlineHelpText>Maximum score attainable in the Discovery Rule that triggered the Discovery</inlineHelpText>
        <label>Max Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>disco__Score_Absolute_Visible_Only__c</fullName>
        <description>Absolute Score counting only visible questions</description>
        <inlineHelpText>Absolute Score counting only visible questions</inlineHelpText>
        <label>Score Absolute (Visible Only)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>disco__Score_Absolute__c</fullName>
        <description>Score achieved in the Discovery Rule that triggered the discovery.</description>
        <inlineHelpText>Score achieved in the Discovery Rule that triggered the discovery.</inlineHelpText>
        <label>Score (Absolute)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>disco__Score_Relative_Visible_Only__c</fullName>
        <formula>if ( disco__Max_Score_Visible_Only__c  &gt; 0,  disco__Score_Absolute_Visible_Only__c  / disco__Max_Score_Visible_Only__c,if (disco__Score_Absolute_Visible_Only__c &gt; 0,1,NULL))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Score Relative (Visible Only)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>disco__Score_Relative__c</fullName>
        <description>Relative score, calculated by the ratio of Score_Absolute/Max_Score</description>
        <formula>if (disco__Max_Score__c &gt; 0, disco__Score_Absolute__c / disco__Max_Score__c,if (disco__Score_Absolute__c &gt; 0,1,NULL))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Relative score, calculated by the ratio of Score_Absolute/Max_Score</inlineHelpText>
        <label>Score (Relative)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <label>Discovery</label>
    <listViews>
        <fullName>disco__All</fullName>
        <columns>NAME</columns>
        <columns>disco__Description__c</columns>
        <columns>disco__Form__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Discovery Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Discoveries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>